Fix configurator layout issue

--- a/src/pages/Configurator/Configurator.scss
+++ b/src/pages/Configurator/Configurator.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex: 1;
   max-width: 100%;
-  max-height: calc(100vh - 82px);
+  max-height: 100vh;
+  padding-top: 82px;
 
   .canvas-section {
     width: 100%;
@@ -22,11 +23,11 @@
     flex-direction: column;
 
     width: 100%;
-    max-width: 400px;
-    padding: 32px;
+    max-width: 410px;
+    padding: 0 32px;
 
     height: 100%;
-    max-height: calc(100vh - 160px);
+    max-height: calc(100vh - 100px);
 
     overflow: hidden;
 
@@ -48,7 +49,7 @@
       height: 256px; /* Fixed height */
       min-width: 100%;
       max-width: none;
-      padding: 16px;
+      padding: 0 16px;
       box-sizing: border-box;
 
       border-left: none;
